5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1760_672.log
== TEST (2019-05-24 12:42:21) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n=int(input("digite um numero: "))
v=ones("n", dtypeo=int)
print=(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 12:42:46) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n=input("digite um numero: ")
v=ones("n", dtypeo=int)
print=(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 12:42:58) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n=input("digite um numero: ")
v=ones("n", dtypeo=int)
print=(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 12:43:23) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n=input("digite um numero: ")
v=ones(4, dtypeo=int)
print=(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 12:43:46) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n=input("digite um numero: ")
v=ones(4, dtype=int)
print=(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 12:44:51) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

v= ones (4, dtype=int)
print=(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 12:46:05) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 = zeros(5, dtype=int)
v1 = ones(4, dtype=int)
print(v0)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 12:46:17) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v = zeros(5, dtype=int)
v1 = ones(4, dtype=int)
print(v)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 12:46:27) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v = zeros(5, dtype=int)
v = ones(4, dtype=int)
print(v)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 12:46:33) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v = zeros(5, dtype=int)
v = ones(4, dtype=int)
print(v)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 12:47:01) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n=input("digite um numero: ")
v= ones(4, dtype=int)
print=(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 12:47:41) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v0 = zeros(5, dtype=int)
v1 = ones(4, dtype=int)
print(v0)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 12:47:53) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v1 = ones(4, dtype=int)
print(v0)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 12:47:59) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v1 = ones(4, dtype=int)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 12:48:50) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n=int(input())
v1 = ones(4, dtype=int)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 12:49:01) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n=int(input())
v1 = ones(n, dtype=int)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 12:49:13) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n=int(input())
v1 = ones(n, dtype=int)
print(v1)
-- EXECUTION TIME:
0.58499
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 18:25:53) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n=int(input())
v1 = ones(, dtype=int)
print(v1)
-- EXECUTION TIME:
0.147334
-- ERROR:
  File "/home/codebench/codes/1760/672/main.py", line 4
    v1 = ones(, dtype=int)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 18:25:58) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
n=int(input())
v1 = ones(n, dtype=int)
print(v1)
-- EXECUTION TIME:
0.476119
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
